src/main/java/com/example/NYA_calculation/validation/SettingGroup.java
package com.example.NYA_calculation.validation;

public interface SettingGroup {
}
