src/main/java/com/example/NYA_calculation/error/UnauthorizedAccessException.java
package com.example.NYA_calculation.error;

public class UnauthorizedAccessException extends RuntimeException {
    public UnauthorizedAccessException(String message) {
        super(message);
    }
}
